--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="utf-8" />
     <title>Ghostwriter</title>
@@ -10,19 +10,19 @@
 </head>
 <body>
     <header class="gw-header">
-        <img src="https://github.com/dunnowho24/PhraseInserter/blob/main/assets/Ghostwriter_Logo.png" alt="Ghostwriter Logo" class="gw-logo" />
+        <img src="C:\Users\elodi\Pictures\Ghostwriter_Logo.png" alt="Ghostwriter Logo" class="gw-logo" />
     </header>
 
     <div class="gw-container">
         <div class="gw-load-section">
-            <label for="fileInput">fileInput</label> <input type="file" id="fileInput" accept=".xlsx" class="gw-file-input" />
+            <input type="file" id="fileInput" accept=".xlsx" class="gw-file-input" />
             <button id="loadButton" class="gw-button">Charger le fichier</button>
         </div>
 
         <input type="text" id="searchInput" placeholder="Rechercher une phrase..." class="gw-search" />
         <div id="search-results" class="gw-search-results"></div>
 
-        <h2 class="gw-subtitle">Menu des Phrases</h2>
+        <h2 class="gw-subtitle">Menu des phrases</h2>
         <div id="menu-container"></div>
     </div>
 
