--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="gw-header">
-        <img src="C:\Users\elodi\Pictures\Ghostwriter_Logo.png" alt="Ghostwriter Logo" class="gw-logo" />
+        <img src="https://github.com/dunnowho24/PhraseInserter/blob/main/assets/Ghostwriter_Logo.png" alt="Ghostwriter Logo" class="gw-logo" />
     </header>
 
     <div class="gw-container">
